--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  height: 100svh;
+  width: 100vw;
+  overflow-x: hidden;
+}
+#root {
+  height: 100%;
+  width: 100%;
+}
