--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --black: #000000;
+}
+
+body {
+  width: 100vw;
+  background-color: var(--black, #000000);
+  overflow-x: hidden;
+}
